+ webpack + materialize-css basic setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Venture page theme for wcnexus.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --bail --progress"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,20 @@
   "bugs": {
     "url": "https://github.com/valorad/wcnexus-venture-theme/issues"
   },
-  "homepage": "https://github.com/valorad/wcnexus-venture-theme#readme"
+  "homepage": "https://github.com/valorad/wcnexus-venture-theme#readme",
+  "dependencies": {
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "materialize-css": "https://github.com/Dogfalo/materialize.git"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.2.3",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.9.1"
+  }
 }
