+ did a bit cover (involved jquery once again, involved jquery-parallax.js)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/valorad/wcnexus-venture-theme#readme",
   "dependencies": {
+    "jquery-parallax.js": "https://github.com/pixelcog/parallax.js.git#v2.0.0-alpha",
     "materialize-css": "^1.0.0-alpha.2"
   },
   "devDependencies": {
