cfg: add babel to transpile es6 code (otherwise uglifyjs will complain)

--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/valorad/wcnexus-venture-theme#readme",
   "dependencies": {
+    "date-fns": "2.0.0-alpha.7",
     "jquery-parallax.js": "https://github.com/pixelcog/parallax.js.git#v2.0.0-alpha",
     "materialize-css": "^1.0.0-alpha.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
