--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcnexus-venture-theme",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Venture page theme for wcnexus.com",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/valorad/wcnexus-venture-theme#readme",
   "dependencies": {
-    "date-fns": "2.0.0-alpha.7",
+    "date-fns": "^2.0.0-alpha.7",
     "jquery-parallax.js": "https://github.com/pixelcog/parallax.js.git#v2.0.0-alpha",
     "materialize-css": "^1.0.0-alpha.3"
   },
