--- a/src/exampleSite/config.toml
+++ b/src/exampleSite/config.toml
@@ -1,24 +1,32 @@
 baseURL = "https://www.wcnexus.com/venture/"
-languageCode = "en-us"
-title = "wcnexus"
 theme = "wcnexus-venture"
 
 pygmentsCodeFences = true
 pygmentsUseClasses = true
 
-[params]
+[Languages]
+  [Languages.en]
+  title = "wcnexus Venture"
+  [Languages.zh]
+  title = "wcnexus 冒险"
 
+[params]
 description = "Theme for wcnexus.com venture page"
 img0 = "images/defaultPost.png" # the default fetured image for posts
 weiboAPI = ""
 
   [[params.navs]]
-  title = "Index"
   link = "/#index"
+    [params.navs.title]
+      en = "Index"
+      zh = "首页"
+  
 
   [[params.navs]]
-  title = "Venture"
   link = "/venture"
+    [params.navs.title]
+    en = "Venture"
+    zh = "冒险"
 
   [params.user]
   name = "Valorad"
