--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
-# Site Specific
-/.vscode/*
-/dist/*
+# site specific
+/.vscode/**
+dist
 *.lock
 package-*.json
